changed backend page calls

--- a/public/browse.html
+++ b/public/browse.html
@@ -28,17 +28,17 @@
             <div
                 class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only headerSmallerBackground">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link"
-                        href="landing-page.html">Home</a><a class="mdl-navigation__link" href="portfolio.html">My
-                        List</a><a class="mdl-navigation__link" href="search.html">Search</a><a
-                        class="mdl-navigation__link" href="browse.html">Browse</a>
+                        href="/index">Home</a><a class="mdl-navigation__link" href="/portfolio">My
+                        List</a><a class="mdl-navigation__link" href="/search">Search</a><a
+                        class="mdl-navigation__link" href="/browse">Browse</a>
                 </nav>
             </div>
         </header>
         <div class="mdl-layout__drawer mdl-layout--small-screen-only">
             <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link"
-                    href="landing-page.html">Home</a><a class="mdl-navigation__link" href="portfolio.html">My List</a><a
-                    class="mdl-navigation__link" href="search.html">Search</a><a class="mdl-navigation__link"
-                    href="browse.html">Browse</a>
+                    href="/index">Home</a><a class="mdl-navigation__link" href="/portfolio">My List</a><a
+                    class="mdl-navigation__link" href="/search">Search</a><a class="mdl-navigation__link"
+                    href="/browse">Browse</a>
             </nav>
         </div>
         <main class="mdl-layout__content">
