added firebase user to local storage

--- a/public/search.html
+++ b/public/search.html
@@ -28,7 +28,7 @@
                 <div
                 class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only headerSmallerBackground">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link"
-                        href="/index">Home</a><a class="mdl-navigation__link" href="/portfolio">My
+                        href="/">Home</a><a class="mdl-navigation__link" href="/portfolio">My
                         List</a><a class="mdl-navigation__link" href="/search">Search</a><a
                         class="mdl-navigation__link" href="/browse">Browse</a>
                 </nav>
@@ -36,7 +36,7 @@
         </header>
         <div class="mdl-layout__drawer mdl-layout--small-screen-only">
             <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link"
-                    href="/index">Home</a><a class="mdl-navigation__link" href="/portfolio">My List</a><a
+                    href="/">Home</a><a class="mdl-navigation__link" href="/portfolio">My List</a><a
                     class="mdl-navigation__link" href="/search">Search</a><a class="mdl-navigation__link"
                     href="/browse">Browse</a>
             </nav>
