--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -28,7 +28,7 @@
         <div
         class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only headerSmallerBackground">
         <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link"
-                href="/index">Home</a><a class="mdl-navigation__link" href="/portfolio">My
+                href="/">Home</a><a class="mdl-navigation__link" href="/portfolio">My
                 List</a><a class="mdl-navigation__link" href="/search">Search</a><a
                 class="mdl-navigation__link" href="/browse">Browse</a>
         </nav>
@@ -36,7 +36,7 @@
 </header>
 <div class="mdl-layout__drawer mdl-layout--small-screen-only">
     <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link"
-            href="/index">Home</a><a class="mdl-navigation__link" href="/portfolio">My List</a><a
+            href="/">Home</a><a class="mdl-navigation__link" href="/portfolio">My List</a><a
             class="mdl-navigation__link" href="/search">Search</a><a class="mdl-navigation__link"
             href="/browse">Browse</a>
     </nav>
@@ -259,6 +259,16 @@
     </main>
     <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
   </div>
+
+  <script defer src="https://www.gstatic.com/firebasejs/7.2.3/firebase-auth.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/7.2.3/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  
+    <script src="./js/javascript.js"></script>
 </body>
 
 </html>
