--- a/public/browse.html
+++ b/public/browse.html
@@ -28,7 +28,7 @@
             <div
                 class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only headerSmallerBackground">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link"
-                        href="landing-page.html">Home</a><a class="mdl-navigation__link" href="portfolio.html">My
+                        href="index.html">Home</a><a class="mdl-navigation__link" href="portfolio.html">My
                         List</a><a class="mdl-navigation__link" href="search.html">Search</a><a
                         class="mdl-navigation__link" href="browse.html">Browse</a>
                 </nav>
@@ -36,7 +36,7 @@
         </header>
         <div class="mdl-layout__drawer mdl-layout--small-screen-only">
             <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link"
-                    href="landing-page.html">Home</a><a class="mdl-navigation__link" href="portfolio.html">My List</a><a
+                    href="index.html">Home</a><a class="mdl-navigation__link" href="portfolio.html">My List</a><a
                     class="mdl-navigation__link" href="search.html">Search</a><a class="mdl-navigation__link"
                     href="browse.html">Browse</a>
             </nav>
