--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
     <!-- material design -->
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-    <link href="styles/main.css" rel="stylesheet">
+    <!-- <link href="styles/main.css" rel="stylesheet" type="text/css"> -->
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body id="top">
