--- a/public/browse.html
+++ b/public/browse.html
@@ -1,82 +1,71 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Portfolio</title>
     <meta name="description" content="Demo of Material design portfolio template by TemplateFlip.com." />
-    <link
-        href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;amp;lang=en"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;amp;lang=en" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" rel="stylesheet" />
 
     <!-- material design -->
-    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet" />
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-    <link href="styles/main.css" rel="stylesheet">
-</head>
+    <link href="styles/main.css" rel="stylesheet" />
+  </head>
 
-<body id="top">
+  <body id="top">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-        <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
-            <div class="mdl-layout__header-row site-logo-row headerBackground"><span class="mdl-layout__title">
-                    <div class="site-logo"></div><span class="site-description">The Later List</span>
-                </span></div>
-            <div
-                class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only headerSmallerBackground">
-                <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link"
-                        href="/">Home</a><a class="mdl-navigation__link" href="/portfolio">My
-                        List</a><a class="mdl-navigation__link" href="/search">Search</a><a
-                        class="mdl-navigation__link" href="/browse">Browse</a>
-                </nav>
-            </div>
-        </header>
-        <div class="mdl-layout__drawer mdl-layout--small-screen-only">
-            <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link"
-                    href="/">Home</a><a class="mdl-navigation__link" href="/portfolio">My List</a><a
-                    class="mdl-navigation__link" href="/search">Search</a><a class="mdl-navigation__link"
-                    href="/browse">Browse</a>
-            </nav>
+      <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
+        <div class="mdl-layout__header-row site-logo-row headerBackground">
+          <span class="mdl-layout__title">
+            <div class="site-logo"></div>
+            <span class="site-description">The Later List</span>
+          </span>
         </div>
-        <main class="mdl-layout__content">
-            <div class="site-content">
-                <div class="container">
-                    <div class="mdl-grid site-max-width">
-                        <div class="mdl-cell mdl-cell--6-col mdl-card mdl-shadow--4dp portfolio-card">
-                            <div class="mdl-card__media">
-                                <img class="article-image" src="img/portfolio1.jpg" border="0" alt="">
-                            </div>
-                            <div class="mdl-card__title">
-                                <h2 class="mdl-card__title-text">Movies</h2>
-                            </div>
-                        </div>
-                        <div class="mdl-cell mdl-cell--6-col mdl-card mdl-shadow--4dp portfolio-card">
-                            <div class="mdl-card__media">
-                                <img class="article-image" src="img/portfolio2.jpg" border="0" alt="">
-                            </div>
-                            <div class="mdl-card__title">
-                                <h2 class="mdl-card__title-text">Podcasts</h2>
-                            </div><br><br>
-                        </div>
-
-                    </div>
+        <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only headerSmallerBackground">
+          <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="/">Home</a><a class="mdl-navigation__link" href="/portfolio">My List</a><a class="mdl-navigation__link" href="/search">Search</a><a class="mdl-navigation__link" href="/browse">Browse</a></nav>
+        </div>
+      </header>
+      <div class="mdl-layout__drawer mdl-layout--small-screen-only">
+        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="/">Home</a><a class="mdl-navigation__link" href="/portfolio">My List</a><a class="mdl-navigation__link" href="/search">Search</a><a class="mdl-navigation__link" href="/browse">Browse</a></nav>
+      </div>
+      <main class="mdl-layout__content">
+        <div class="site-content">
+          <div class="container">
+            <div class="mdl-grid site-max-width">
+              <div class="mdl-cell mdl-cell--6-col mdl-card mdl-shadow--4dp portfolio-card catCard" id="movieCatCard">
+                <div class="mdl-card__media">
+                  <img class="article-image" src="img/portfolio1.jpg" border="0" alt="" />
                 </div>
+                <div class="mdl-card__title">
+                  <h2 class="mdl-card__title-text">Movies</h2>
+                </div>
+              </div>
+              <div class="mdl-cell mdl-cell--6-col mdl-card mdl-shadow--4dp portfolio-card catCard" id="podCatCard">
+                <div class="mdl-card__media">
+                  <img class="article-image" src="img/portfolio2.jpg" border="0" alt="" />
+                </div>
+                <div class="mdl-card__title">
+                  <h2 class="mdl-card__title-text">Podcasts</h2>
+                </div>
+                <br /><br />
+              </div>
             </div>
-            <footer class="mdl-mini-footer">
-                <div class="footer-container">
-                    <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/"
-                            target="_blank">TemplateFlip</a></div>
-                    <ul class="mdl-mini-footer__link-list">
-                        <li><a href="#">Privacy & Terms</a></li>
-                    </ul>
-                </div>
-            </footer>
-        </main>
-        <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
+          </div>
+        </div>
+        <footer class="mdl-mini-footer">
+          <div class="footer-container">
+            <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
+            <ul class="mdl-mini-footer__link-list">
+              <li><a href="#">Privacy & Terms</a></li>
+            </ul>
+          </div>
+        </footer>
+      </main>
+      <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
     </div>
-</body>
-
+  </body>
 </html>
