--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -17,6 +17,7 @@
   <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
   <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
   <link href="styles/main.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery.js"></script>
 </head>
 
 <body id="top">
@@ -266,9 +267,8 @@
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
     <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  
-    <script src="./js/javascript.js"></script>
+    
+    <script src="./js/portfolio.js"></script>
 </body>
 
 </html>
