--- a/tim/about.html
+++ b/tim/about.html
@@ -89,4 +89,43 @@
       <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
     </div>
   </body>
-</html>
+  // var Sequelize = require("sequelize");
+  // // sequelize (lowercase) references my connection to the DB.
+  // var sequelize = require("../config/conection.js");
+  
+  // var Item = sequelize.define("items", {
+  //     userId: Sequelize.INTEGER,
+  //     catagory: Sequelize.STRING,
+  //     title: Sequelize.STRING,
+  //     itemId: Sequelize.STRING
+  //   });
+    
+  //   // Syncs with DB
+  //   Item.sync();
+    
+  //   // Makes the Book Model available for other files (will also create a table)
+  //   module.exports = Item;
+
+  // // Dependencies
+// // =============================================================
+
+// // Sequelize (capital) references the standard library
+// var Sequelize = require("sequelize");
+// // sequelize (lowercase) references my connection to the DB.
+// var sequelize = require("../config/conection.js");
+
+// // Creates a "Book" model that matches up with DB
+// var User = sequelize.define("user", {
+//   userName: Sequelize.STRING
+// });
+
+// // Syncs with DB
+// User.sync();
+
+// // Makes the Book Model available for other files (will also create a table)
+
+
+
+// module.exports = User;
+
+  
