--- a/public/search.html
+++ b/public/search.html
@@ -85,6 +85,7 @@
             </footer>
         </main>
         <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
+        <script src="./js/search.js"></script>
     </div>
 </body>
 
