--- a/public/browse.html
+++ b/public/browse.html
@@ -17,6 +17,7 @@
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <link href="styles/main.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery.js"></script>
 </head>
 
 <body id="top">
@@ -24,13 +25,19 @@
         <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
             <div class="mdl-layout__header-row site-logo-row headerBackground"><span class="mdl-layout__title">
                     <div class="site-logo"></div><span class="site-description">The Later List</span>
+                    <p id='welcome'></p>
                 </span></div>
             <div
                 class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only headerSmallerBackground">
-                <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link"
-                        href="/">Home</a><a class="mdl-navigation__link" href="/portfolio">My
-                        List</a><a class="mdl-navigation__link" href="/search">Search</a><a class="mdl-navigation__link"
-                        href="/browse">Browse</a>
+                <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+                    <a class="mdl-navigation__link" href="/">Home</a>
+                    <a class="mdl-navigation__link" id=myList href="/portfolio">My List</a>
+                    <a class="mdl-navigation__link" href="/search">Search</a>
+                    <a class="mdl-navigation__link" href="/browse">Browse</a>
+                    <!-- --------------------------- -->
+                    <a class="mdl-navigation__link" id=signout href="#">Signout</a> 
+                    <a class="mdl-navigation__link" id=login href="/login">Login</a>  
+                    <!-- ----------------------------------- -->
                 </nav>
             </div>
         </header>
@@ -76,6 +83,7 @@
             </footer>
         </main>
         <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
+        <script src="js/browse.js"></script>
     </div>
 </body>
 
