--- a/public/search.html
+++ b/public/search.html
@@ -17,6 +17,7 @@
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <link href="styles/main.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery.js"></script>
 </head>
 
 <body id="top">
@@ -24,13 +25,19 @@
         <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
             <div class="mdl-layout__header-row site-logo-row headerBackground"><span class="mdl-layout__title">
                     <div class="site-logo"></div><span class="site-description">The Later List</span>
+                    <p id='welcome'></p>
                 </span></div>
             <div
                 class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only headerSmallerBackground">
-                <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link"
-                        href="index.html">Home</a><a class="mdl-navigation__link" href="portfolio.html">My
-                        List</a><a class="mdl-navigation__link" href="search.html">Search</a><a
-                        class="mdl-navigation__link" href="browse.html">Browse</a>
+                <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+                    <a class="mdl-navigation__link" href="index.html">Home</a>
+                    <a class="mdl-navigation__link" id=myList href="portfolio.html">My List</a>
+                    <a class="mdl-navigation__link" href="search.html">Search</a>
+                    <a class="mdl-navigation__link" href="browse.html">Browse</a>
+                    <!-- --------------------------- -->
+                    <a class="mdl-navigation__link" id=signout href="#">Signout</a>
+                    <a class="mdl-navigation__link" id='login' href="/login">Login</a>   
+                    <!-- ----------------------------------- -->
                 </nav>
             </div>
         </header>
