edited burger menu

--- a/public/search.html
+++ b/public/search.html
@@ -64,11 +64,7 @@
                                     <div class="mdc-notched-outline mdc-notched-outline--upgraded">
                                         <div class="mdc-notched-outline__leading"></div>
                                         <div class="mdc-notched-outline__notch">
-
-                                            <label for="demo-mdc-text-field" class="mdc-floating-label">
-                                                <!---->Search
-                                                <!----></label>
-
+                                            <label class="mdc-floating-label"></label> <!--placeholder-->
                                         </div>
                                         <div class="mdc-notched-outline__trailing"></div>
                                     </div>
