--- a/public/search.html
+++ b/public/search.html
@@ -54,20 +54,26 @@
                     <div class="mdl-grid site-max-width">
                         <div class="mdl-cell mdl-cell--12-col">
                             <div class="inline-text-field-container mdl-cell mdl-cell--2-offset mdl-cell--8-col ">
-
                                 <div class="mdc-text-field mdc-text-field--outlined mdl-cell--12-col">
-
-
-                                    <input class="mdc-text-field__input mdl-cell--12-col" autocorrect="off"
+                                        <form action="#">
+                                                <div class="mdl-textfield mdl-js-textfield">
+                                                  <input class="mdl-textfield__input" type="text" id="search">
+                                                  <label class="mdl-textfield__label" for="search">Search...</label>
+                                                </div>
+                                                <input class="mdc-text-field__input mdl-cell--12-col" autocorrect="off"
                                         autocomplete="off" spellcheck="false">
-
-                                    <div class="mdc-notched-outline mdc-notched-outline--upgraded">
+                                        </form>
+                                        
+                                    <!-- <div class="mdc-notched-outline mdc-notched-outline--upgraded">
                                         <div class="mdc-notched-outline__leading"></div>
                                         <div class="mdc-notched-outline__notch">
-                                            <label class="mdc-floating-label"></label> <!--placeholder-->
+
+                                            <label for="demo-mdc-text-field" class="mdc-floating-label">
+                                                Search</label>
+
                                         </div>
                                         <div class="mdc-notched-outline__trailing"></div>
-                                    </div>
+                                    </div> -->
 
                                 </div>
 
