--- a/public/browse.html
+++ b/public/browse.html
@@ -45,7 +45,8 @@
             <div class="site-content">
                 <div class="container">
                     <div class="mdl-grid site-max-width">
-                        <div class="mdl-cell mdl-cell--6-col mdl-card mdl-shadow--4dp portfolio-card">
+                        <div class="mdl-cell mdl-cell--6-col mdl-card mdl-shadow--4dp portfolio-card catCard"
+                            id="movieCatCard">
                             <div class="mdl-card__media">
                                 <img class="article-image" src="img/portfolio1.jpg" border="0" alt="">
                             </div>
@@ -53,7 +54,8 @@
                                 <h2 class="mdl-card__title-text">Movies</h2>
                             </div>
                         </div>
-                        <div class="mdl-cell mdl-cell--6-col mdl-card mdl-shadow--4dp portfolio-card">
+                        <div class="mdl-cell mdl-cell--6-col mdl-card mdl-shadow--4dp portfolio-card catCard"
+                            id="podCatCard">
                             <div class="mdl-card__media">
                                 <img class="article-image" src="img/portfolio2.jpg" border="0" alt="">
                             </div>
@@ -76,6 +78,22 @@
             </footer>
         </main>
         <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+
+        <script type="text/javascript" src="js/javascript.js"></script>
+        <!-- <script>
+
+
+            $('.catCard').on('click', function (e) {
+                let id = this.id;
+                // window.location.href = `/${id}`
+                console.log(id);
+
+            })
+
+        </script> -->
     </div>
 </body>
 
