--- a/public/index.html
+++ b/public/index.html
@@ -28,12 +28,12 @@
             <div class="mdl-layout__header-row site-logo-row headerBackground"><span class="mdl-layout__title">
                     <div class="site-logo"></div><span class="site-description">The Later List</span>
                 </span></div>
-                <div
+            <div
                 class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only headerSmallerBackground">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link"
                         href="/">Home</a><a class="mdl-navigation__link" href="/portfolio">My
-                        List</a><a class="mdl-navigation__link" href="/search">Search</a><a
-                        class="mdl-navigation__link" href="/browse">Browse</a>
+                        List</a><a class="mdl-navigation__link" href="/search">Search</a><a class="mdl-navigation__link"
+                        href="/browse">Browse</a>
                 </nav>
             </div>
         </header>
@@ -48,35 +48,15 @@
             <div class="site-content">
                 <div class="container">
                     <div class="mdl-grid site-max-width">
-                        <div
-                            class="mdl-cell mdl-cell--6-offset mdl-cell--6-col mdl-card mdl-shadow--4dp portfolio-card signUpCard">
+                        <div class="mdl-cell mdl-cell--6-offset mdl-cell--6-col mdl-card portfolio-card signUpCard"
+                            id="homeCard">
 
 
                             <div class="mdl-card__title">
-                                <h2 class="mdl-card__title-text">Sign Up</h2>
+                                <h1 class="mdl-card__title-text" id="signUpText">Know what you want to watch.</h1>
                             </div>
 
-                            <div id="firebaseui-auth-container"></div>
-
-                            <!-- <form action="#" class="mdl-card--border">
-                                <div class="mdl-textfield mdl-cell--2-offset mdl-js-textfield">
-                                    <input class="mdl-textfield__input" type="text" id="sample1">
-                                    <label class="mdl-textfield__label" for="sample1">Username:</label>
-                                </div>
-                                <div class="mdl-textfield mdl-cell--2-offset mdl-js-textfield">
-                                    <input class="mdl-textfield__input" type="text" id="sample1">
-                                    <label class="mdl-textfield__label" for="sample1">Email:</label>
-                                </div>
-                                <div class="mdl-textfield mdl-cell--2-offset mdl-js-textfield">
-                                    <input class="mdl-textfield__input" type="text" id="sample1">
-                                    <label class="mdl-textfield__label" for="sample1">Password:</label>
-                                </div>
-                            </form>
-
-                            <section class="section--center mdl-grid site-max-width homepage-portfolio">
-                                <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent"
-                                    id="signUpButton" href="portfolio.html">Sign Up With Email</a>
-                            </section> -->
+                            <button id="signUpButton">Sign Up With Email</button>
                         </div>
                     </div>
 
@@ -100,17 +80,18 @@
 
     <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
     <script defer src="https://www.gstatic.com/firebasejs/7.2.3/firebase-analytics.js"></script>
-  
+
     <!-- Add Firebase products that you want to use -->
     <script defer src="https://www.gstatic.com/firebasejs/7.2.3/firebase-auth.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/7.2.3/firebase-firestore.js"></script>
-      <script src="https://www.gstatic.com/firebasejs/6.6.1/firebase-app.js"></script>
-      <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
-      <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
-      <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    
-      <script src="./js/javascript.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/javascript.js"></script>
 </body>
 
 </html>
