--- a/public/search.html
+++ b/public/search.html
@@ -71,6 +71,29 @@
                             </div>
                         </div>
 
+                        <div class="mdl-grid container" id="searchContainer">
+                            <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp search-card">
+                                <div class="" id="searchBoxContainer">
+                                    <div class="mdl-card__title" id="searchCardImageBox">
+                                        <h1 class="mdl-card__title-text">Result Title</h1>
+                                    </div>
+                                    <div class="" id="searchDescription">
+                                        <h6>Description of result from search</h4>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp search-card">
+                                <div class="" id="searchBoxContainer">
+                                    <div class="mdl-card__title " id="searchCardImageBox">
+                                        <h1 class="mdl-card__title-text">Result Title</h1>
+                                    </div>
+                                    <div class="" id="searchDescription">
+                                        <h6>Description of result from search</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
