added card starter to the myList page

--- a/public/search.html
+++ b/public/search.html
@@ -60,15 +60,15 @@
                                     <div class="mdc-text-field mdc-text-field--outlined mdl-cell--8-col">
 
 
-                                        <input class="mdc-text-field__input" autocorrect="off" autocomplete="off"
-                                            spellcheck="false" id="demo-mdc-text-field" maxlength="524288">
+                                        <input class="mdc-text-field__input search" autocorrect="off" autocomplete="off"
+                                            spellcheck="false"id="demo-mdc-text-field" maxlength="524288">
 
                                         <div class="mdc-notched-outline mdc-notched-outline--upgraded">
                                             <div class="mdc-notched-outline__leading"></div>
                                             <div class="mdc-notched-outline__notch" style="">
 
                                                 <label for="demo-mdc-text-field" class="mdc-floating-label" style="">
-                                                    <!---->Search
+                                                    <!---->
                                                     <!----></label>
 
                                             </div>
@@ -78,10 +78,12 @@
                                     </div>
 
                                     <button class="mdl-button mdl-js-button mdl-button--raised" type='submit'
-                                        id='searchButton'>Submit</button>
+                                        id='searchButton'>Search</button>
                                 </div>
                             </div>
                         </div>
+
+                        <div id=box></div>
 
                         <div class="mdl-grid container" id="searchContainer">
                             <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp search-card">
