website logo and copyright edit

--- a/public/browse.html
+++ b/public/browse.html
@@ -26,18 +26,20 @@
               </span></div>
           <div
               class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only headerSmallerBackground">
-              <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link"
-                      href="/">Home</a><a class="mdl-navigation__link" href="/portfolio">My
-                      List</a><a class="mdl-navigation__link" href="/search">Search</a><a class="mdl-navigation__link"
-                      href="/browse">Browse</a>
+              <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+                    <a class="mdl-navigation__link"href="/">Home</a>
+                    <a class="mdl-navigation__link" href="/portfolio">MyList</a>
+                    <a class="mdl-navigation__link" href="/search">Search</a>
+                    <a class="mdl-navigation__link" href="/browse">Browse</a>
               </nav>
           </div>
       </header>
       <div class="mdl-layout__drawer mdl-layout--small-screen-only">
           <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link"
-                  href="/">Home</a><a class="mdl-navigation__link" href="/portfolio">My List</a><a
-                  class="mdl-navigation__link" href="/search">Search</a><a class="mdl-navigation__link"
-                  href="/browse">Browse</a>
+                  href="/">Home</a>
+                  <a class="mdl-navigation__link" href="/portfolio">My List</a>
+                  <a class="mdl-navigation__link" href="/search">Search</a>
+                  <a class="mdl-navigation__link"href="/browse">Browse</a>
           </nav>
       </div>
       <main class="mdl-layout__content">
