--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Material Portfolio Template Demo</title>
+    <title>The Later List</title>
     <meta name="description" content="Demo of Material design portfolio template by TemplateFlip.com." />
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;amp;lang=en" rel="stylesheet" />
 
@@ -30,8 +30,9 @@
               <div
               class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only headerSmallerBackground">
               <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link"
-                      href="/">Home</a><a class="mdl-navigation__link" href="/portfolio">My
-                      List</a><a class="mdl-navigation__link" href="/search">Search</a><a
+                      href="/">Home</a>
+                      <a class="mdl-navigation__link" href="/portfolio">MyList</a>
+                      <a class="mdl-navigation__link" href="/search">Search</a><a
                       class="mdl-navigation__link" href="/browse">Browse</a>
               </nav>
           </div>
@@ -60,7 +61,7 @@
 
         <footer class="mdl-mini-footer">
           <div class="footer-container">
-            <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
+            <div class="mdl-logo">&copy; The Later List. copyright © 2019 <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
             <ul class="mdl-mini-footer__link-list">
               <li><a href="#">Privacy & Terms</a></li>
             </ul>
