--- a/public/browse.html
+++ b/public/browse.html
@@ -76,6 +76,15 @@
                         <script src="js/browse.js"></script>
 
                     </div>
+
+                    <footer class="mdl-mini-footer">
+                        <div class="footer-container">
+                          <div class="mdl-logo">&copy; The Later List. copyright © 2019 <a href="https://templateflip.com/" target="_blank"></a></div>
+                          <ul class="mdl-mini-footer__link-list">
+                            <li><a href="#">Privacy & Terms</a></li>
+                          </ul>
+                        </div>
+                      </footer>
 </body>
 
 </html>
