--- a/public/podcasts.html
+++ b/public/podcasts.html
@@ -214,6 +214,14 @@
       </footer>
       <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
   </div>
+  <footer class="mdl-mini-footer">
+    <div class="footer-container">
+      <div class="mdl-logo">&copy; The Later List. copyright © 2019 <a href="https://templateflip.com/" target="_blank"></a></div>
+      <ul class="mdl-mini-footer__link-list">
+        <li><a href="#">Privacy & Terms</a></li>
+      </ul>
+    </div>
+  </footer>
 </body>
 ​
 </html>
