--- a/public/search.html
+++ b/public/search.html
@@ -114,13 +114,12 @@
 
             <footer class="mdl-mini-footer">
                 <div class="footer-container">
-                    <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/"
-                            target="_blank">TemplateFlip</a></div>
-                    <ul class="mdl-mini-footer__link-list">
-                        <li><a href="#">Privacy & Terms</a></li>
-                    </ul>
+                  <div class="mdl-logo">&copy; The Later List. copyright © 2019 <a href="https://templateflip.com/" target="_blank"></a></div>
+                  <ul class="mdl-mini-footer__link-list">
+                    <li><a href="#">Privacy & Terms</a></li>
+                  </ul>
                 </div>
-            </footer>
+              </footer>
         </main>
         <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
         <script src="./js/search.js"></script>
