podcast contents- genres, footers

--- a/public/login.html
+++ b/public/login.html
@@ -63,7 +63,7 @@
                             <div id="firebaseui-auth-container"></div>
                             
 
-                            <!-- <form action="#" class="mdl-card--border">
+                            <form action="#" class="mdl-card--border">
                                 <div class="mdl-textfield mdl-cell--2-offset mdl-js-textfield">
                                     <input class="mdl-textfield__input" type="text" id="sample1">
                                     <label class="mdl-textfield__label" for="sample1">Username:</label>
@@ -81,23 +81,21 @@
                             <section class="section--center mdl-grid site-max-width homepage-portfolio">
                                 <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent"
                                     id="signUpButton" href="portfolio.html">Sign Up With Email</a>
-                            </section> -->
+                            </section>
                         </div>
                     </div>
 
 
                 </div>
             </div>
-
             <footer class="mdl-mini-footer">
                 <div class="footer-container">
-                    <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/"
-                            target="_blank">TemplateFlip</a></div>
-                    <ul class="mdl-mini-footer__link-list">
-                        <li><a href="#">Privacy & Terms</a></li>
-                    </ul>
+                  <div class="mdl-logo">&copy; The Later List. copyright © 2019 <a href="https://templateflip.com/" target="_blank"></a></div>
+                  <ul class="mdl-mini-footer__link-list">
+                    <li><a href="#">Privacy & Terms</a></li>
+                  </ul>
                 </div>
-            </footer>
+              </footer>
         </main>
     </div>
 
