--- a/public/podcasts.html
+++ b/public/podcasts.html
@@ -49,11 +49,18 @@
                 <img class="article-image" src="img/portfolio1.jpg" border="0" alt="">
               </div>
               <div class="mdl-card__title">
-                <h2 class="mdl-card__title-text">Rocky Peak</h2>
+                <h2 class="mdl-card__title-text">Audioblogs</h2>
               </div>
               <div class="mdl-card__supporting-text">
-                Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim
-                nostrud aliqua consectetur ad consectetur sunt..
+                Share and listen to personal stories and experiences from people you admire. Follow your peers in to their personla jorney.
+
+              </div>
+              <br>
+              <div class="mdl-card__actions mdl-card--border">
+                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent"
+                  href="portfolio-page.html">
+                  Learn More
+                </a>
               </div>
             </div>
             <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
@@ -61,11 +68,11 @@
                 <img class="article-image" src="img/portfolio2.jpg" border="0" alt="">
               </div>
               <div class="mdl-card__title">
-                <h2 class="mdl-card__title-text">Night Shadow</h2>
+                <h2 class="mdl-card__title-text">Politics</h2>
               </div>
               <div class="mdl-card__supporting-text">
-                Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim
-                nostrud aliqua consectetur ad consectetur sunt..
+                Catch up with the latest political discussions. Save your favorte political podcasts here and comeback anytime.
+
               </div><br>
               <div class="mdl-card__actions mdl-card--border">
                 <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent"
@@ -79,11 +86,10 @@
                 <img class="article-image" src="img/portfolio3.jpg" border="0" alt="">
               </div>
               <div class="mdl-card__title">
-                <h2 class="mdl-card__title-text">Sky Reach</h2>
+                <h2 class="mdl-card__title-text">Comedy</h2>
               </div>
               <div class="mdl-card__supporting-text">
-                Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim
-                nostrud aliqua consectetur ad consectetur sunt..
+               Listen to the legendery comedians like shock jocks, Bibb and Yaz and many more.
               </div><br>
               <div class="mdl-card__actions mdl-card--border">
                 <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent"
@@ -97,11 +103,11 @@
                 <img class="article-image" src="img/portfolio4.jpg" border="0" alt="">
               </div>
               <div class="mdl-card__title">
-                <h2 class="mdl-card__title-text">Pencil Tip</h2>
+                <h2 class="mdl-card__title-text">Couple Casts</h2>
               </div>
               <div class="mdl-card__supporting-text">
-                Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim
-                nostrud aliqua consectetur ad consectetur sunt..
+                Although most couple casts could also be described as comedy casts, the one thing that makes these shows a couple cast (other than the fact that the hosts are a couple) is that they feature the personal lives of the hosts. 
+                Topics might range from the couple's sex lives to nightmarish stories of traveling the globe. 
               </div><br>
               <div class="mdl-card__actions mdl-card--border">
                 <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent"
@@ -115,11 +121,11 @@
                 <img class="article-image" src="img/portfolio5.jpg" border="0" alt="">
               </div>
               <div class="mdl-card__title">
-                <h2 class="mdl-card__title-text">Magic Leaves</h2>
+                <h2 class="mdl-card__title-text">Educational</h2>
               </div>
               <div class="mdl-card__supporting-text">
-                Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim
-                nostrud aliqua consectetur ad consectetur sunt..
+                Instructional audio is nothing new; it is just that with podcasting the distribution of that audio has been made quite a bit easier and cheaper. 
+                Educational podcasts don't have to come just from teachers and professors; they can also come from everyday people who use their podcast to educate their listeners about a specific subject or about random facts.
               </div><br>
               <div class="mdl-card__actions mdl-card--border">
                 <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent"
@@ -133,11 +139,11 @@
                 <img class="article-image" src="img/portfolio6.jpg" border="0" alt="">
               </div>
               <div class="mdl-card__title">
-                <h2 class="mdl-card__title-text">Water Flow</h2>
+                <h2 class="mdl-card__title-text">Gaming</h2>
               </div>
               <div class="mdl-card__supporting-text">
-                Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim
-                nostrud aliqua consectetur ad consectetur sunt..
+                This is a well-represented category, with many podcasts covering computer gaming, console gaming, role-playing gaming and board gaming. 
+                Gaming podcasts run the gamut, discussing gaming news, interviews with industry professionals, reviews, or reports from gaming sessions...
               </div><br>
               <div class="mdl-card__actions mdl-card--border">
                 <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent"
@@ -151,11 +157,11 @@
                 <img class="article-image" src="img/portfolio7.jpg" border="0" alt="">
               </div>
               <div class="mdl-card__title">
-                <h2 class="mdl-card__title-text">Lonely Bridge</h2>
+                <h2 class="mdl-card__title-text">Godcasts: Religious and Spiritual Podcasts</h2>
               </div>
               <div class="mdl-card__supporting-text">
-                Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim
-                nostrud aliqua consectetur ad consectetur sunt..
+                This genre of podcasting is the fourth most popular behind audioblogs, music, and technology. One of the best places to find religious podcasts is at the GodCast Network (www.godcast.org), which was the first podcast network and was started by Craig Patchett.
+                Most are just everyday people talking about a subject that they are very passionate about, even if that means doing so in the Klingon language. ...
               </div><br>
               <div class="mdl-card__actions mdl-card--border">
                 <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent"
@@ -190,8 +196,8 @@
                 <h2 class="mdl-card__title-text">City Scape</h2>
               </div>
               <div class="mdl-card__supporting-text">
-                Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim
-                nostrud aliqua consectetur ad consectetur sunt..
+                Okay, so you want to do a podcast, but try as you may, you can't get anyone you know to commit to being your co-host. What are you to do? Well, you could always interview people you do not know. 
+                Think Jon Stewart, David Lettermen, Inside the Actors Studio, Fresh Air, and Space Ghost Coast to Coast...
               </div><br>
               <div class="mdl-card__actions mdl-card--border">
                 <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent"
@@ -203,15 +209,6 @@
           </div>
         </div>
       </div>
-      <footer class="mdl-mini-footer">
-        <div class="footer-container">
-          <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/"
-              target="_blank">TemplateFlip</a></div>
-          <ul class="mdl-mini-footer__link-list">
-            <li><a href="#">Privacy & Terms</a></li>
-          </ul>
-        </div>
-      </footer>
       <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
   </div>
   <footer class="mdl-mini-footer">
