added tv shows to the search page and have it display differently for tv shows on the myList html

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -54,7 +54,7 @@
       <div class="site-content">
         <div class="container">
           <div class="mdl-grid site-max-width">
-            <div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset listButtonsBox">
+            <!-- <div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset listButtonsBox">
 
               <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored listButton tomatoButton"
                 id="allButton">
@@ -72,10 +72,12 @@
               </button>
 
 
-            </div>
+            </div> -->
 
           </div>
-            <div id=box></div>
+            <div id=box>
+
+            </div>
         </div>
       </div>
       <footer class="mdl-mini-footer">
