checking to see if commit is up to date

--- a/public/index.html
+++ b/public/index.html
@@ -28,13 +28,18 @@
         <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
             <div class="mdl-layout__header-row site-logo-row headerBackground"><span class="mdl-layout__title">
                     <div class="site-logo"></div><span class="site-description">The Later List</span>
+                    <p id='welcome'></p>
                 </span></div>
             <div
                 class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only headerSmallerBackground">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link"
-                        href="/">Home</a><a class="mdl-navigation__link" href="/portfolio">My
-                        List</a><a class="mdl-navigation__link" href="/search">Search</a><a class="mdl-navigation__link"
-                        href="/browse">Browse</a>
+                        href="/">Home</a>
+                        <a class="mdl-navigation__link"id='myList' href="/portfolio">My
+                        List</a><a class="mdl-navigation__link" href="/search">Search</a>
+                        <!-- <a class="mdl-navigation__link"
+                        href="/browse">Browse</a> -->
+                        <a class="mdl-navigation__link" id=signout href="#">Signout</a>
+                        <a class="mdl-navigation__link" id='login' href="/login">Login</a>
                 </nav>
             </div>
         </header>
@@ -53,12 +58,12 @@
                             id="homeCard">
 
 
-                            <div class="mdl-card__title">
+                            <!-- <div class="mdl-card__title">
                                 <h1 class="mdl-card__title-text" id="signUpText">Know what you want to watch.</h1>
                             </div>
                             <br><br>
 
-                            <button id="signUpButton">Sign Up With Email</button>
+                            <button id="signUpButton">Sign Up With Email</button> -->
                         </div>
                     </div>
                 </div>
@@ -94,7 +99,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/javascript.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
 </body>
 
 </html>
