--- a/public/login.html
+++ b/public/login.html
@@ -35,9 +35,9 @@
                 class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only headerSmallerBackground">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                     <a class="mdl-navigation__link" href="/">Home</a>
-                    <a class="mdl-navigation__link" href="/portfolio">My List</a>
+                    <!-- <a class="mdl-navigation__link" href="/portfolio">My List</a> -->
                     <a class="mdl-navigation__link" href="/search">Search</a>
-                    <a class="mdl-navigation__link" href="/browse">Browse</a>
+                    <!-- <a class="mdl-navigation__link" href="/browse">Browse</a> -->
                   
                 </nav>
             </div>
