--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -32,7 +32,7 @@
           <a class="mdl-navigation__link" href="/">Home</a>
           <a class="mdl-navigation__link" id=myList href="/portfolio">My List</a>
           <a class="mdl-navigation__link" href="/search">Search</a>
-          <a class="mdl-navigation__link" href="/browse">Browse</a>
+          <!-- <a class="mdl-navigation__link" href="/browse">Browse</a> -->
           <!-- --------------------------- -->
           <a class="mdl-navigation__link" id=signout href="#">Signout</a>
           <a class="mdl-navigation__link" id='login' href="/login">Login</a>   
