--- a/public/search.html
+++ b/public/search.html
@@ -33,7 +33,7 @@
                     <a class="mdl-navigation__link" href="index.html">Home</a>
                     <a class="mdl-navigation__link" id=myList href="portfolio.html">My List</a>
                     <a class="mdl-navigation__link" href="search.html">Search</a>
-                    <a class="mdl-navigation__link" href="browse.html">Browse</a>
+                    <!-- <a class="mdl-navigation__link" href="browse.html">Browse</a> -->
                     <!-- --------------------------- -->
                     <a class="mdl-navigation__link" id=signout href="#">Signout</a>
                     <a class="mdl-navigation__link" id='login' href="/login">Login</a>
@@ -128,7 +128,7 @@
                
             </div>
            
-            <footer class="mdl-mini-footer">
+            <!-- <footer class="mdl-mini-footer">
                 <div class="footer-container">
                     <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/"
                             target="_blank">TemplateFlip</a></div>
@@ -136,7 +136,7 @@
                         <li><a href="#">Privacy & Terms</a></li>
                     </ul>
                 </div>
-            </footer>
+            </footer> -->
         </main>
         <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
         <script src="./js/search.js"></script>
