--- a/public/search.html
+++ b/public/search.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Material Portfolio Template Demo</title>
+    <title>Later List</title>
     <meta name="description" content="Demo of Material design portfolio template by TemplateFlip.com." />
     <link
         href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;amp;lang=en"
@@ -53,7 +53,7 @@
             <div class="site-content">
                 <div class="container">
                     <div>
-                    <h3 class='text'>What catagory would you like to search</h3>
+                    <h3 class='text'>What category would you like to search</h3>
                         
                     <select class="chosen-select" id="type">
                                 <option value="podcast">Podcast</option>
